--- a/jdbc/jdbcAndHibernate/pom.xml
+++ b/jdbc/jdbcAndHibernate/pom.xml
@@ -41,6 +41,16 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>4.3.10.Final</version>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.24</version>
+    </dependency>
   </dependencies>
 
   <build>
